# avxs

./: bks.txt  index.md  readme.md
instances/: readme.txt
instances/STTRPSD/: README.txt
instances/chao/: TTRP_01.txt.sv  TTRP_02.txt.sv  TTRP_03.txt.sv  TTRP_04.txt.sv  TTRP_05.txt.sv  TTRP_06.txt.sv  TTRP_07.txt.sv  TTRP_08.txt.sv  TTRP_09.txt.sv  TTRP_10.txt.sv  TTRP_11.txt.sv  TTRP_12.txt.sv  TTRP_13.txt.sv  TTRP_14.txt.sv  TTRP_15.txt.sv  TTRP_16.txt.sv  TTRP_17.txt.sv  TTRP_18.txt.sv  TTRP_19.txt.sv  TTRP_20.txt.sv  TTRP_21.txt.sv  list.batch
instances/cvrp/: X-n1001-k43.vrp.xsttrp  X-n101-k25.vrp.xsttrp  X-n106-k14.vrp.xsttrp  X-n110-k13.vrp.xsttrp  X-n115-k10.vrp.xsttrp  X-n120-k6.vrp.xsttrp  X-n125-k30.vrp.xsttrp  X-n129-k18.vrp.xsttrp  X-n134-k13.vrp.xsttrp  X-n139-k10.vrp.xsttrp  X-n143-k7.vrp.xsttrp  X-n148-k46.vrp.xsttrp  X-n153-k22.vrp.xsttrp  X-n157-k13.vrp.xsttrp  X-n162-k11.vrp.xsttrp  X-n167-k10.vrp.xsttrp  X-n172-k51.vrp.xsttrp  X-n176-k26.vrp.xsttrp  X-n181-k23.vrp.xsttrp  X-n186-k15.vrp.xsttrp  X-n190-k8.vrp.xsttrp  X-n195-k51.vrp.xsttrp  X-n200-k36.vrp.xsttrp  X-n204-k19.vrp.xsttrp  X-n209-k16.vrp.xsttrp  X-n214-k11.vrp.xsttrp  X-n219-k73.vrp.xsttrp  X-n223-k34.vrp.xsttrp  X-n228-k23.vrp.xsttrp  X-n233-k16.vrp.xsttrp  X-n237-k14.vrp.xsttrp  X-n242-k48.vrp.xsttrp  X-n247-k47.vrp.xsttrp  X-n251-k28.vrp.xsttrp  X-n256-k16.vrp.xsttrp  X-n261-k13.vrp.xsttrp  X-n266-k58.vrp.xsttrp  X-n270-k35.vrp.xsttrp  X-n275-k28.vrp.xsttrp  X-n280-k17.vrp.xsttrp  (+60 more)
instances/xsttrp/: xsttrp0  xsttrp1  xsttrp10  xsttrp11  xsttrp12  xsttrp13  xsttrp14  xsttrp15  xsttrp16  xsttrp17  xsttrp18  xsttrp19  xsttrp2  xsttrp20  xsttrp21  xsttrp22  xsttrp23  xsttrp24  xsttrp25  xsttrp26  xsttrp27  xsttrp28  xsttrp29  xsttrp3  xsttrp30  xsttrp31  xsttrp32  xsttrp33  xsttrp34  xsttrp35  xsttrp36  xsttrp37  xsttrp38  xsttrp39  xsttrp4  xsttrp40  xsttrp41  xsttrp42  xsttrp43  xsttrp44  (+38 more)
results/: bartolini.txt  lrp.txt  mdvrp.txt  sttrp.txt  sttrp_bartolini.txt  sttrpsd.txt  xsttrp.txt
results/additional_analysis/: xsttrp_longer_improvement.txt  xsttrp_no_polishing.txt  xsttrp_no_relocate.txt  xsttrp_no_rootref.txt  xsttrp_no_segswap.txt  xsttrp_no_swap.txt  xsttrp_no_twopt.txt  xsttrp_only_shaking.txt  xsttrp_vnd_best_rnei_order.txt
results/analsys/: near1.txt  near10.txt  near2.txt  near25.txt  rank1.txt  rank2.txt  rank3.txt  rank4.txt  rank5.txt  xsttrp_no_granular.txt  xsttrp_rnei_shake.txt  xsttrp_vnd.txt
results/analysis/: near1.txt  near10.txt  near2.txt  near25.txt  near5.txt  near999.txt  rank1.txt  rank2.txt  rank3.txt  rank4.txt  rank5.txt  rank8.txt  xsttrp_no_granular.txt  xsttrp_rnei_shake.txt  xsttrp_vnd.txt
results/texfiles/: STTRP-100-10-1-c.dat_run0.tex  STTRP-100-10-1-c.dat_run1.tex  STTRP-100-10-1-c.dat_run2.tex  STTRP-100-10-1-c.dat_run3.tex  STTRP-100-10-1-c.dat_run4.tex  STTRP-100-10-1-c.dat_run5.tex  STTRP-100-10-1-c.dat_run6.tex  STTRP-100-10-1-c.dat_run7.tex  STTRP-100-10-1-c.dat_run8.tex  STTRP-100-10-1-c.dat_run9.tex  STTRP-100-10-1-rd.dat_run0.tex  STTRP-100-10-1-rd.dat_run1.tex  STTRP-100-10-1-rd.dat_run2.tex  STTRP-100-10-1-rd.dat_run3.tex  STTRP-100-10-1-rd.dat_run4.tex  STTRP-100-10-1-rd.dat_run5.tex  STTRP-100-10-1-rd.dat_run6.tex  STTRP-100-10-1-rd.dat_run7.tex  STTRP-100-10-1-rd.dat_run8.tex  STTRP-100-10-1-rd.dat_run9.tex  STTRP-100-10-2-c.dat_run0.tex  STTRP-100-10-2-c.dat_run1.tex  STTRP-100-10-2-c.dat_run2.tex  STTRP-100-10-2-c.dat_run3.tex  STTRP-100-10-2-c.dat_run4.tex  STTRP-100-10-2-c.dat_run5.tex  STTRP-100-10-2-c.dat_run6.tex  STTRP-100-10-2-c.dat_run7.tex  STTRP-100-10-2-c.dat_run8.tex  STTRP-100-10-2-c.dat_run9.tex  STTRP-100-10-2-rd.dat_run0.tex  STTRP-100-10-2-rd.dat_run1.tex  STTRP-100-10-2-rd.dat_run2.tex  STTRP-100-10-2-rd.dat_run3.tex  STTRP-100-10-2-rd.dat_run4.tex  STTRP-100-10-2-rd.dat_run5.tex  STTRP-100-10-2-rd.dat_run6.tex  STTRP-100-10-2-rd.dat_run7.tex  STTRP-100-10-2-rd.dat_run8.tex  STTRP-100-10-2-rd.dat_run9.tex  (+2090 more)
scripts/: additional_analysis.sh  analysis.sh  build.sh  cmake_install.sh  run.sh
source/: CMakeLists.txt  arc.hpp  avxs.cpp  avxs.hpp  avxs_cplex_procedures.cpp  avxs_h_procedures.cpp  avxs_parameters.hpp  avxs_result.cpp  avxs_result.hpp  avxs_result_analyzer.cpp  cmdline_arguments_parser.cpp  cmdline_arguments_parser.hpp  globals.hpp  latex_drawer.cpp  latex_drawer.hpp  main.cpp  mm.hpp  program_options.hpp  route.cpp  route.hpp  route_type.hpp  routes_slab.cpp  routes_slab.hpp  set_partitioning_pool.cpp  set_partitioning_pool.hpp  timer.hpp  utils.cpp  utils.hpp  xsttrp_instance.cpp  xsttrp_instance.hpp  xsttrp_solution.cpp  xsttrp_solution.hpp  xsttrp_wip_solution.cpp  xsttrp_wip_solution.hpp  xsttrp_wip_solution_h_procedures.cpp  xsttrp_wip_solution_ls_procedures.cpp
